contrast fix on button

--- a/css/style.css
+++ b/css/style.css
@@ -66,7 +66,7 @@ main .container {
 button {
   height: 50px;
   width: 150px;
-  background-color: #34bfd4;
+  background-color: #f3ce46;
   color: black;
   border: none;
   border-radius: 8px;
